# news_extraction

./: .gcloudignore  README.md  check_RSS_feed.ipynb  cloudbuild.yaml  debug_google_tts.py  local_pipeline_test.py  local_tts_test.py  pipeline_test_results_20250926_081921.json  pipeline_test_results_20250926_083431.json  pyproject.toml  test_ai_prompts.py  test_ai_summarizer.py  test_cloud_tts.py  test_google_tts.py  test_long_content.py  test_production_content.py  test_tts_config.py
cloud_build_temp/config/: settings.py
cloud_build_temp/src/: __init__.py  ai_summarizer.py  cloud_storage.py  content_extractor.py  rss_fetcher.py  telegram_sender.py
news_extraction_prod/: .dockerignore  DEPLOYMENT.md  Dockerfile  README.md  deploy-with-keys.sh  deploy.sh  main.py  preflight-check.py  requirements.txt  setup-dev.sh  setup-gcloud-auth.sh  test_app.py  test_config.py  test_tts.py  verify-deployment.py
news_extraction_prod/config/: settings.py  sources.yaml
news_extraction_prod/src/: ai_summarizer.py  deduplicator.py  news_pipeline.py  tts_generator.py
